--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -75,7 +75,7 @@ if (ENV.CURSEFORGE_KEY) {
         apiKey = ENV.CURSEFORGE_KEY
         project {
             id = project.curseforge_id_fabric
-            releaseType = "release"
+            releaseType = project.curseforge_type
             addGameVersion "Fabric"
             addGameVersion "1.16.5"
             mainArtifact(remapJar.archivePath)
@@ -109,7 +109,7 @@ publishing {
     repositories {
         if (ENV.LOCAL_MAVEN) {
             maven {
-                url = "file://${ENV.LOCAL_MAVEN}"
+                url "file://${ENV.LOCAL_MAVEN}"
             }
         }
 
@@ -117,7 +117,7 @@ publishing {
             maven {
                 url "https://maven.saps.dev/minecraft"
                 credentials {
-                    username = "latvian"
+                    username = "ftb"
                     password = "${ENV.SAPS_TOKEN}"
                 }
             }
