--- a/gradle.properties
+++ b/gradle.properties
@@ -6,15 +6,16 @@ mod_package=dev.ftb.mods
 mod_version=1605.3.0
 mod_author=LatvianModder
 minecraft_version=1.16.5
-forge_version=36.0.42
+forge_version=36.1.23
 curseforge_id_forge=314906
 curseforge_id_fabric=472657
-architectury_version=1.11.144
+curseforge_type=alpha
+architectury_version=1.15.13
 fabric_loader_version=0.11.1
 fabric_api_version=0.30.0+1.16
-rhino_version=1.7.13-build.23
-kubejs_version=1605.3.7-build.185
-ftb_library_version=1605.3.0-build.66
-ftb_teams_version=1605.2.0-build.55
-ftb_ranks_version=1605.1.2-build.15
+rhino_version=1605.1.0-build.4
+kubejs_version=1605.3.10-build.6
+ftb_library_version=1605.3.0-build.67
+ftb_teams_version=1605.2.0-build.56
+ftb_ranks_version=1605.1.2-build.17
 cloth_config_version=4.11.+
