--- a/settings.gradle
+++ b/settings.gradle
@@ -1,14 +1,15 @@
 pluginManagement {
 	repositories {
+		maven { url "https://maven.minecraftforge.net/" }
 		maven { url "https://maven.fabricmc.net/" }
-		maven { url "https://maven.shedaniel.me/" }
+		maven { url "https://maven.architectury.dev/" }
 		maven { url "https://forge.modpacks.ch/maven/" }
 		gradlePluginPortal()
 	}
 }
 
-include("common")
-include("fabric")
-include("forge")
+include "common"
+include "fabric"
+include "forge"
 
-rootProject.name = 'FTB-Chunks-1.16.5'
+rootProject.name = "FTB-Chunks-1.16.5"
