--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -1,135 +1,134 @@
 plugins {
-    id "com.github.johnrengelman.shadow" version "5.0.0"
-    id "com.matthewprenger.cursegradle" version "1.4.0"
+	id "com.github.johnrengelman.shadow" version "5.0.0"
+	id "com.matthewprenger.cursegradle" version "1.4.0"
 }
 
 def ENV = System.getenv()
 
 configurations {
-    shadowCommon
+	shadowCommon
 }
 
 architectury {
-    platformSetupLoomIde()
-    forge()
+	platformSetupLoomIde()
+	forge()
 }
 
 loom {
-    mixinConfigs = ["ftbchunks-common.mixins.json"]
-    useFabricMixin = true
+	mixinConfigs = ["ftbchunks-common.mixins.json"]
+	useFabricMixin = true
 }
 
 dependencies {
-    forge "net.minecraftforge:forge:${rootProject.minecraft_version}-${rootProject.forge_version}"
+	forge "net.minecraftforge:forge:${rootProject.minecraft_version}-${rootProject.forge_version}"
 
-    modApi "me.shedaniel:architectury-forge:${rootProject.architectury_version}"
-    modImplementation "dev.ftb.mods:ftb-library-forge:${rootProject.ftb_library_version}"
-    modImplementation "dev.ftb.mods:ftb-teams-forge:${rootProject.ftb_teams_version}"
-    modImplementation "dev.ftb.mods:ftb-ranks-forge:${rootProject.ftb_ranks_version}"
-    modImplementation "dev.latvian.mods:rhino:${rootProject.rhino_version}"
-    modImplementation "dev.latvian.mods:kubejs-forge:${rootProject.kubejs_version}"
-    modImplementation "me.shedaniel.cloth:cloth-config-forge:${rootProject.cloth_config_version}"
+	modApi "me.shedaniel:architectury-forge:${rootProject.architectury_version}"
+	modImplementation "dev.ftb.mods:ftb-library-forge:${rootProject.ftb_library_version}"
+	modImplementation "dev.ftb.mods:ftb-teams-forge:${rootProject.ftb_teams_version}"
+	modImplementation "dev.ftb.mods:ftb-ranks-forge:${rootProject.ftb_ranks_version}"
+	modImplementation "dev.latvian.mods:rhino:${rootProject.rhino_version}"
+	modImplementation "dev.latvian.mods:kubejs-forge:${rootProject.kubejs_version}"
+	modImplementation "me.shedaniel.cloth:cloth-config-forge:${rootProject.cloth_config_version}"
 
-    modImplementation "curse.maven:waystones-245755:3309624"
+	modImplementation "curse.maven:waystones-245755:3309624"
 
-    implementation(project(path: ":common")) {
-        transitive = false
-    }
-    developmentForge(project(path: ":common")) {
-        transitive = false
-    }
-    shadowCommon(project(path: ":common", configuration: "transformProductionForge")) {
-        transitive = false
-    }
+	implementation(project(path: ":common")) {
+		transitive = false
+	}
+	developmentForge(project(path: ":common")) {
+		transitive = false
+	}
+	shadowCommon(project(path: ":common", configuration: "transformProductionForge")) {
+		transitive = false
+	}
 }
 
 processResources {
-    inputs.property "version", project.version
+	inputs.property "version", project.version
 
-    filesMatching("META-INF/mods.toml") {
-        expand "version": project.version
-    }
+	filesMatching("META-INF/mods.toml") {
+		expand "version": project.version
+	}
 }
 
 shadowJar {
-    exclude "fabric.mod.json"
+	exclude "fabric.mod.json"
 
-    configurations = [project.configurations.shadowCommon]
-    classifier "dev-shadow"
+	configurations = [project.configurations.shadowCommon]
+	classifier "dev-shadow"
 }
 
 remapJar {
-    input.set shadowJar.archiveFile
-    dependsOn shadowJar
-    classifier "forge"
+	input.set shadowJar.archiveFile
+	dependsOn shadowJar
+	archiveBaseName.set "${rootProject.mod_name}-${project.name}"
+	archiveClassifier.set null
 }
 
 jar {
-    classifier "dev"
+	classifier "dev"
 }
 
 java {
-    withSourcesJar()
+	withSourcesJar()
 }
 
 sourcesJar {
-    def commonSources = project(":common").sourcesJar
-    dependsOn commonSources
-    from commonSources.archiveFile.map { zipTree(it) }
+	def commonSources = project(":common").sourcesJar
+	dependsOn commonSources
+	from commonSources.archiveFile.map { zipTree(it) }
 }
 
 if (ENV.CURSEFORGE_KEY) {
-    curseforge {
-        apiKey = ENV.CURSEFORGE_KEY
-        project {
-            id = project.curseforge_id_forge
-            releaseType = project.curseforge_type
-            addGameVersion "Forge"
-            addGameVersion "1.16.5"
-            mainArtifact(remapJar.archivePath)
-            relations {
-                requiredDependency 'architectury-forge'
-                requiredDependency 'ftb-library-forge'
-                requiredDependency 'ftb-teams-forge'
-                requiredDependency 'cloth-config-forge'
-                optionalDependency 'ftb-ranks-forge'
-            }
-            changelog = getGitChangelog
-            changelogType = 'markdown'
-        }
-    }
+	curseforge {
+		apiKey = ENV.CURSEFORGE_KEY
+		project {
+			id = project.curseforge_id_forge
+			releaseType = project.curseforge_type
+			addGameVersion "Forge"
+			addGameVersion "1.16.5"
+			mainArtifact(remapJar.archivePath)
+			relations {
+				requiredDependency 'architectury-forge'
+				requiredDependency 'ftb-library-forge'
+				requiredDependency 'ftb-teams-forge'
+				requiredDependency 'cloth-config-forge'
+				optionalDependency 'ftb-ranks-forge'
+			}
+			changelog = getGitChangelog
+			changelogType = 'markdown'
+		}
+	}
 }
 
 publishing {
-    publications {
-        mavenForge(MavenPublication) {
-            artifactId = rootProject.archivesBaseName + "-" + project.name
-            artifact(remapJar) {
-                classifier null
-            }
-            artifact(sourcesJar) {
-                builtBy remapSourcesJar
-            }
-        }
-    }
+	publications {
+		mavenForge(MavenPublication) {
+			artifactId = "${rootProject.mod_name}-${project.name}"
+			artifact(remapJar)
+			artifact(sourcesJar) {
+				builtBy remapSourcesJar
+			}
+		}
+	}
 
-    repositories {
-        if (ENV.LOCAL_MAVEN) {
-            maven {
-                url "file://${ENV.LOCAL_MAVEN}"
-            }
-        }
+	repositories {
+		if (ENV.LOCAL_MAVEN) {
+			maven {
+				url "file://${ENV.LOCAL_MAVEN}"
+			}
+		}
 
-        if (ENV.SAPS_TOKEN) {
-            maven {
-                url "https://maven.saps.dev/minecraft"
-                credentials {
-                    username = "ftb"
-                    password = "${ENV.SAPS_TOKEN}"
-                }
-            }
-        }
-    }
+		if (ENV.SAPS_TOKEN) {
+			maven {
+				url "https://maven.saps.dev/minecraft"
+				credentials {
+					username = "ftb"
+					password = "${ENV.SAPS_TOKEN}"
+				}
+			}
+		}
+	}
 }
 
 rootProject.tasks.getByName("curseforgePublish").dependsOn tasks.getByName("curseforge")
