--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -18,9 +18,9 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
 	modApi "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
 	modApi "me.shedaniel:architectury-fabric:${rootProject.architectury_version}"
-	modImplementation "dev.ftb.mods:ftb-library-fabric:${rootProject.ftb_library_version}"
-	modImplementation "dev.ftb.mods:ftb-teams-fabric:${rootProject.ftb_teams_version}"
-	modImplementation "dev.ftb.mods:ftb-ranks-fabric:${rootProject.ftb_ranks_version}"
+	modImplementation("dev.ftb.mods:ftb-library-fabric:${rootProject.ftb_library_version}") { transitive = false }
+	modImplementation("dev.ftb.mods:ftb-teams-fabric:${rootProject.ftb_teams_version}") { transitive = false }
+	modImplementation("dev.ftb.mods:ftb-ranks-fabric:${rootProject.ftb_ranks_version}") { transitive = false }
 	modImplementation "dev.latvian.mods:rhino:${rootProject.rhino_version}"
 	modImplementation "dev.latvian.mods:kubejs-fabric:${rootProject.kubejs_version}"
 
