--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -38,7 +38,7 @@ side = "BOTH"
 [[dependencies.ftbchunks]]
 modId = "ftblibrary"
 mandatory = true
-versionRange = "[1,)"
+versionRange = "[1605.3.1-build.53,)"
 ordering = "AFTER"
 side = "BOTH"
 
