--- a/gradle.properties
+++ b/gradle.properties
@@ -9,12 +9,12 @@ minecraft_version=1.16.5
 forge_version=36.1.23
 curseforge_id_forge=314906
 curseforge_id_fabric=472657
-curseforge_type=beta
+curseforge_type=release
 architectury_version=1.20.28
 fabric_loader_version=0.11.1
 fabric_api_version=0.30.0+1.16
 rhino_version=1605.1.0-build.4
 kubejs_version=1605.3.10-build.6
-ftb_library_version=1605.3.1-build.53
+ftb_library_version=1605.3.1-build.56
 ftb_teams_version=1605.2.1-build.13
 ftb_ranks_version=1605.1.4-build.2
