--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -21,7 +21,7 @@ dependencies {
 	modImplementation("dev.ftb.mods:ftb-library-fabric:${rootProject.ftb_library_version}") { transitive = false }
 	modImplementation("dev.ftb.mods:ftb-teams-fabric:${rootProject.ftb_teams_version}") { transitive = false }
 	modImplementation("dev.ftb.mods:ftb-ranks-fabric:${rootProject.ftb_ranks_version}") { transitive = false }
-	modImplementation "dev.latvian.mods:rhino:${rootProject.rhino_version}"
+	modImplementation "dev.latvian.mods:rhino-fabric:${rootProject.rhino_version}"
 	modImplementation "dev.latvian.mods:kubejs-fabric:${rootProject.kubejs_version}"
 
 	implementation(project(path: ":common")) {
