--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,11 +1,13 @@
 dependencies {
+	// TODO: dependency cleanup (1.18)
 	modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
 	modApi "me.shedaniel:architectury:${rootProject.architectury_version}"
-	modImplementation("dev.ftb.mods:ftb-library-fabric:${rootProject.ftb_library_version}") { transitive = false }
-	modImplementation("dev.ftb.mods:ftb-teams-fabric:${rootProject.ftb_teams_version}") { transitive = false }
-	modImplementation("dev.ftb.mods:ftb-ranks-fabric:${rootProject.ftb_ranks_version}") { transitive = false }
-	modImplementation "dev.latvian.mods:rhino-fabric:${rootProject.rhino_version}"
-	modImplementation "dev.latvian.mods:kubejs-fabric:${rootProject.kubejs_version}"
+
+	modImplementation("dev.ftb.mods:ftb-library:${rootProject.ftb_library_version}") { transitive = false }
+	modImplementation("dev.ftb.mods:ftb-teams:${rootProject.ftb_teams_version}") { transitive = false }
+	modImplementation("dev.ftb.mods:ftb-ranks:${rootProject.ftb_ranks_version}") { transitive = false }
+	modImplementation("dev.latvian.mods:rhino:${rootProject.rhino_version}") { transitive = false }
+	modImplementation("dev.latvian.mods:kubejs:${rootProject.kubejs_version}") { transitive = false }
 }
 
 def ENV = System.getenv()
@@ -14,18 +16,11 @@ architectury {
 	common()
 }
 
-java {
-	withSourcesJar()
-}
-
 publishing {
 	publications {
 		mavenCommon(MavenPublication) {
 			artifactId = rootProject.archivesBaseName
-			artifact remapJar
-			artifact(sourcesJar) {
-				builtBy remapSourcesJar
-			}
+			from components.java
 		}
 	}
 
