--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -1,38 +1,37 @@
 plugins {
-	id "com.github.johnrengelman.shadow" version "5.0.0"
+	id "com.github.johnrengelman.shadow" version "7.1.2"
 	id "com.matthewprenger.cursegradle" version "1.4.0"
 }
 
 def ENV = System.getenv()
-
-configurations {
-	shadowCommon
-}
 
 architectury {
 	platformSetupLoomIde()
 	fabric()
 }
 
+configurations {
+	common
+	shadowCommon // Don't use shadow from the shadow plugin because we don't want IDEA to index this.
+	compileClasspath.extendsFrom common
+	runtimeClasspath.extendsFrom common
+	developmentFabric.extendsFrom common
+}
+
 dependencies {
-	modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
+	modApi "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
+
 	modApi "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
 	modApi "me.shedaniel:architectury-fabric:${rootProject.architectury_version}"
+
 	modImplementation("dev.ftb.mods:ftb-library-fabric:${rootProject.ftb_library_version}") { transitive = false }
 	modImplementation("dev.ftb.mods:ftb-teams-fabric:${rootProject.ftb_teams_version}") { transitive = false }
 	modImplementation("dev.ftb.mods:ftb-ranks-fabric:${rootProject.ftb_ranks_version}") { transitive = false }
-	modImplementation "dev.latvian.mods:rhino-fabric:${rootProject.rhino_version}"
-	modImplementation "dev.latvian.mods:kubejs-fabric:${rootProject.kubejs_version}"
+	modImplementation("dev.latvian.mods:rhino-fabric:${rootProject.rhino_version}") { transitive = false }
+	modImplementation("dev.latvian.mods:kubejs-fabric:${rootProject.kubejs_version}") { transitive = false }
 
-	implementation(project(path: ":common")) {
-		transitive = false
-	}
-	developmentFabric(project(path: ":common")) {
-		transitive = false
-	}
-	shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) {
-		transitive = false
-	}
+	common(project(path: ":common", configuration: "namedElements")) { transitive false }
+	shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
 }
 
 processResources {
@@ -51,7 +50,7 @@ shadowJar {
 remapJar {
 	input.set shadowJar.archiveFile
 	dependsOn shadowJar
-	archiveBaseName.set "${rootProject.mod_name}-${project.name}"
+	archiveBaseName.set "${rootProject.archives_base_name}-${project.name}"
 	archiveClassifier.set null
 }
 
@@ -59,14 +58,10 @@ jar {
 	classifier "dev"
 }
 
-java {
-	withSourcesJar()
-}
-
-sourcesJar {
-	def commonSources = project(":common").sourcesJar
-	dependsOn commonSources
-	from commonSources.archiveFile.map { zipTree(it) }
+components.java {
+	withVariantsFromConfiguration(project.configurations.shadowRuntimeElements) {
+		skip()
+	}
 }
 
 if (ENV.CURSEFORGE_KEY) {
@@ -94,11 +89,8 @@ if (ENV.CURSEFORGE_KEY) {
 publishing {
 	publications {
 		mavenFabric(MavenPublication) {
-			artifactId = "${rootProject.mod_name}-${project.name}"
-			artifact(remapJar)
-			artifact(sourcesJar) {
-				builtBy remapSourcesJar
-			}
+			artifactId = "${rootProject.archives_base_name}-${project.name}"
+			from components.java
 		}
 	}
 
