--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.jvmargs=-Xmx2G
 org.gradle.daemon=false
 mod_id=ftbchunks
-mod_name=ftb-chunks
-mod_package=dev.ftb.mods
+archives_base_name=ftb-chunks
+maven_group=dev.ftb.mods
 mod_version=1605.3.2
 mod_author=LatvianModder
 minecraft_version=1.16.5
@@ -10,11 +10,11 @@ forge_version=36.2.2
 curseforge_id_forge=314906
 curseforge_id_fabric=472657
 curseforge_type=release
-architectury_version=1.20.28
-fabric_loader_version=0.11.6
-fabric_api_version=0.38.1+1.16
-ftb_library_version=1605.3.3-build.71
-ftb_teams_version=1605.2.2-build.30
-kubejs_version=1605.3.17-build.116
-rhino_version=1605.1.4-build.59
-ftb_ranks_version=1605.1.4-build.12
+architectury_version=1.28.48
+fabric_loader_version=0.12.12
+fabric_api_version=0.42.0+1.16
+ftb_library_version=1605.3.4-build.90
+ftb_teams_version=1605.2.3-build.40
+kubejs_version=1605.3.19-build.258
+rhino_version=1605.1.5-build.75
+ftb_ranks_version=1605.1.5-build.16
