--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id "com.github.johnrengelman.shadow" version "7.1.2"
+	id "com.github.johnrengelman.shadow" version "7.0.0"
 	id "com.matthewprenger.cursegradle" version "1.4.0"
 }
 
@@ -16,13 +16,17 @@ configurations {
 	compileClasspath.extendsFrom common
 	runtimeClasspath.extendsFrom common
 	developmentFabric.extendsFrom common
+	dev
+}
+
+artifacts {
+	dev(jar)
 }
 
 dependencies {
 	modApi "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
-
 	modApi "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
-	modApi "me.shedaniel:architectury-fabric:${rootProject.architectury_version}"
+	modApi "dev.architectury:architectury-fabric:${rootProject.architectury_version}"
 
 	modImplementation("dev.ftb.mods:ftb-library-fabric:${rootProject.ftb_library_version}") { transitive = false }
 	modImplementation("dev.ftb.mods:ftb-teams-fabric:${rootProject.ftb_teams_version}") { transitive = false }
@@ -30,7 +34,10 @@ dependencies {
 	modImplementation("dev.latvian.mods:rhino-fabric:${rootProject.rhino_version}") { transitive = false }
 	modImplementation("dev.latvian.mods:kubejs-fabric:${rootProject.kubejs_version}") { transitive = false }
 
-	common(project(path: ":common", configuration: "namedElements")) { transitive false }
+	// modImplementation("curse.maven:balm-fabric-500525:${balm_fabric_version}")
+	// modImplementation("curse.maven:waystones-fabric-500087:${waystones_fabric_version}")
+
+	common(project(path: ":common", configuration: "dev")) { transitive false }
 	shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
 }
 
@@ -71,7 +78,7 @@ if (ENV.CURSEFORGE_KEY) {
 			id = project.curseforge_id_fabric
 			releaseType = project.curseforge_type
 			addGameVersion "Fabric"
-			addGameVersion "1.16.5"
+			addGameVersion "1.18.1"
 			mainArtifact(remapJar.archivePath)
 			relations {
 				requiredDependency 'architectury-fabric'
