--- a/gradle.properties
+++ b/gradle.properties
@@ -3,18 +3,22 @@ org.gradle.daemon=false
 mod_id=ftbchunks
 archives_base_name=ftb-chunks
 maven_group=dev.ftb.mods
-mod_version=1605.3.2
+mod_version=1801.3.3
 mod_author=LatvianModder
-minecraft_version=1.16.5
-forge_version=36.2.2
+minecraft_version=1.18.1
+forge_version=39.0.5
 curseforge_id_forge=314906
 curseforge_id_fabric=472657
-curseforge_type=release
-architectury_version=1.28.48
+curseforge_type=alpha
+architectury_version=3.2.56
 fabric_loader_version=0.12.12
-fabric_api_version=0.42.0+1.16
-ftb_library_version=1605.3.4-build.90
-ftb_teams_version=1605.2.3-build.40
-kubejs_version=1605.3.19-build.258
-rhino_version=1605.1.5-build.75
-ftb_ranks_version=1605.1.5-build.16
+fabric_api_version=0.44.0+1.18
+ftb_library_version=1801.3.5-build.104
+ftb_teams_version=1801.2.4-build.43
+kubejs_version=1801.4.0-build.264
+rhino_version=1800.1.7-build.92
+ftb_ranks_version=1801.1.6-build.18
+waystones_forge_version=3558793
+waystones_fabric_version=3558792
+balm_forge_version=3558793
+balm_fabric_version=3584834
