--- a/build.gradle
+++ b/build.gradle
@@ -31,18 +31,10 @@ allprojects {
 	group = project.maven_group
 	archivesBaseName = project.archives_base_name
 
-	sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
+	sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = 17
 
-	tasks.withType(JavaCompile) {
+	compileJava {
 		options.encoding = "UTF-8"
-
-		// The Minecraft launcher currently installs Java 8 for users, so your mod probably wants to target Java 8 too
-		// JDK 9 introduced a new way of specifying this that will make sure no newer classes or methods are used.
-		// We'll use that if it's available, but otherwise we'll use the older option.
-		def targetVersion = 8
-		if (JavaVersion.current().isJava9Compatible()) {
-			options.release = targetVersion
-		}
 	}
 
 	repositories {
