--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -19,6 +19,10 @@ configurations {
 	dev
 }
 
+loom {
+	accessWidenerPath = project(":common").file("src/main/resources/ftbchunks.accesswidener")
+}
+
 artifacts {
 	dev(jar)
 }
