Fixed broken fabric dev

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -19,8 +19,19 @@ configurations {
 	dev
 }
 
+def generatedResources = file("src/generated/resources")
+def accessWidenerFile = project(":common").file("src/main/resources/ftbchunks.accesswidener")
+
 loom {
-	accessWidenerPath = project(":common").file("src/main/resources/ftbchunks.accesswidener")
+	accessWidenerPath = accessWidenerFile
+}
+
+sourceSets {
+	main {
+		resources {
+			srcDir generatedResources
+		}
+	}
 }
 
 artifacts {
@@ -45,7 +56,14 @@ dependencies {
 	shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
 }
 
+// The AW file is needed in :fabric project resources when the game is run.
+task copyAccessWidener(type: Copy) {
+	from accessWidenerFile
+	into generatedResources
+}
+
 processResources {
+	dependsOn copyAccessWidener
 	inputs.property "version", project.version
 
 	filesMatching("fabric.mod.json") {
