--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -52,6 +52,6 @@ side = "BOTH"
 [[dependencies.ftbchunks]]
 modId = "kubejs"
 mandatory = false
-versionRange = "[1.0.0,)"
+versionRange = "[1801.4.2-,)"
 ordering = "BEFORE"
 side = "BOTH"
