chore: ported to 1.18.2 but we're waiting on kubejs

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -58,10 +58,11 @@ publishing {
 	}
 }
 
-afterEvaluate {
-	tasks {
-		remapJar {
-			remapAccessWidener = false
-		}
-	}
-}
+// TODO: ask @maxneedssnacks
+//afterEvaluate {
+//	tasks {
+//		remapJar {
+//			remapAccessWidener = false
+//		}
+//	}
+//}
