--- a/gradle.properties
+++ b/gradle.properties
@@ -6,18 +6,18 @@ maven_group=dev.ftb.mods
 mod_version=1802.3.5
 mod_author=FTB Team
 minecraft_version=1.18.2
-forge_version=40.0.3
+forge_version=40.0.34
 curseforge_id_forge=314906
 curseforge_id_fabric=472657
-curseforge_type=alpha
-architectury_version=4.0.30
+curseforge_type=release
+architectury_version=4.1.34
 fabric_loader_version=0.13.3
 fabric_api_version=0.47.9+1.18.2
-ftb_library_version=1802.3.6-build.111
-ftb_teams_version=1802.2.6-build.49
-kubejs_version=1801.4.3-build.310
-rhino_version=1801.1.8-build.102
-ftb_ranks_version=1802.1.7-build.25
+ftb_library_version=1802.3.6-build.115
+ftb_teams_version=1802.2.6-build.51
+kubejs_version=1802.5.0-build.322
+rhino_version=1801.1.9-build.131
+ftb_ranks_version=1802.1.7-build.27
 
 # Compat
 waystones_forge_version=3558793
