fix: Chunkloading not working

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -49,6 +49,9 @@ dependencies {
 	modImplementation("dev.latvian.mods:rhino-fabric:${rootProject.rhino_version}") { transitive = false }
 	modImplementation("dev.latvian.mods:kubejs-fabric:${rootProject.kubejs_version}") { transitive = false }
 
+//	modImplementation("curse.maven:auth-me-356643:3725468")
+//	modImplementation("curse.maven:cloth-config-319057:3641132")
+
 	// modImplementation("curse.maven:balm-fabric-500525:${balm_fabric_version}")
 	// modImplementation("curse.maven:waystones-fabric-500087:${waystones_fabric_version}")
 
