fix: chunkloading not working until restart

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -58,10 +58,10 @@ publishing {
 	}
 }
 
-afterEvaluate {
-	tasks {
-		remapJar {
-			remapAccessWidener = false
-		}
-	}
-}
+//afterEvaluate {
+//	tasks {
+//		remapJar {
+//			remapAccessWidener = false
+//		}
+//	}
+//}
