--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -116,7 +116,7 @@ if (ENV.CURSEFORGE_KEY) {
 			addGameVersion "1.18.2"
 			mainArtifact(remapJar.archivePath)
 			relations {
-				requiredDependency 'architectury-forge'
+				requiredDependency 'architectury-api'
 				requiredDependency 'ftb-library-forge'
 				requiredDependency 'ftb-teams-forge'
 				optionalDependency 'ftb-ranks-forge'
