--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -46,8 +46,8 @@ dependencies {
 	modImplementation("dev.ftb.mods:ftb-library-fabric:${rootProject.ftb_library_version}") { transitive = false }
 	modImplementation("dev.ftb.mods:ftb-teams-fabric:${rootProject.ftb_teams_version}") { transitive = false }
 	modImplementation("dev.ftb.mods:ftb-ranks-fabric:${rootProject.ftb_ranks_version}") { transitive = false }
-	modImplementation("dev.latvian.mods:rhino-fabric:${rootProject.rhino_version}") { transitive = false }
-	modImplementation("dev.latvian.mods:kubejs-fabric:${rootProject.kubejs_version}") { transitive = false }
+//	modImplementation("dev.latvian.mods:rhino-fabric:${rootProject.rhino_version}") { transitive = false }
+//	modImplementation("dev.latvian.mods:kubejs-fabric:${rootProject.kubejs_version}") { transitive = false }
 
 //	modImplementation("curse.maven:auth-me-356643:3725468")
 //	modImplementation("curse.maven:cloth-config-319057:3641132")
@@ -103,7 +103,7 @@ if (ENV.CURSEFORGE_KEY) {
 			id = project.curseforge_id_fabric
 			releaseType = project.curseforge_type
 			addGameVersion "Fabric"
-			addGameVersion "1.18.2"
+			addGameVersion "1.19"
 			mainArtifact(remapJar.archivePath)
 			relations {
 				requiredDependency 'architectury-api'
