--- a/common/build.gradle
+++ b/common/build.gradle
@@ -5,8 +5,8 @@ dependencies {
 	modImplementation("dev.ftb.mods:ftb-library:${rootProject.ftb_library_version}") { transitive = false }
 	modImplementation("dev.ftb.mods:ftb-teams:${rootProject.ftb_teams_version}") { transitive = false }
 	modImplementation("dev.ftb.mods:ftb-ranks:${rootProject.ftb_ranks_version}") { transitive = false }
-//	modImplementation("dev.latvian.mods:rhino:${rootProject.rhino_version}") { transitive = false }
-//	modImplementation("dev.latvian.mods:kubejs:${rootProject.kubejs_version}") { transitive = false }
+	modImplementation("dev.latvian.mods:rhino:${rootProject.rhino_version}") { transitive = false }
+	modImplementation("dev.latvian.mods:kubejs:${rootProject.kubejs_version}") { transitive = false }
 }
 
 def ENV = System.getenv()
