--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -63,8 +63,12 @@ dependencies {
 }
 
 processResources {
-	exclude '.cache'
+	def file = new File("./build/resources/main/META-INF/mods.toml")
+	if (file.exists()) {
+		file.delete()
+	}
 
+	exclude '.cache'
 	inputs.property "version", project.version
 
 	filesMatching("META-INF/mods.toml") {
