--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -56,9 +56,9 @@ versionRange = "[${ranksversion},)"
 ordering = "AFTER"
 side = "BOTH"
 
-[[dependencies.ftbchunks]]
-modId = "kubejs"
-mandatory = false
-versionRange = "[${kubejsversion},)"
-ordering = "BEFORE"
-side = "BOTH"
+#[[dependencies.ftbchunks]]
+#modId = "kubejs"
+#mandatory = false
+#versionRange = "[${kubejsversion},)"
+#ordering = "BEFORE"
+#side = "BOTH"
