fix: use the correct mc target in Curseforge

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -103,7 +103,7 @@ if (ENV.CURSEFORGE_KEY) {
 			id = project.curseforge_id_fabric
 			releaseType = project.curseforge_type
 			addGameVersion "Fabric"
-			addGameVersion "1.19"
+			addGameVersion rootProject.minecraft_version
 			mainArtifact(remapJar.archivePath)
 			relations {
 				requiredDependency 'architectury-api'
