--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -55,6 +55,7 @@ dependencies {
 	modImplementation("dev.latvian.mods:rhino-forge:${rootProject.rhino_version}") { transitive = false }
 	modImplementation("dev.latvian.mods:kubejs-forge:${rootProject.kubejs_version}") { transitive = false }
 
+	modLocalRuntime("me.shedaniel:RoughlyEnoughItems-forge:8.3.563")
 	// modImplementation("curse.maven:balm-531761:${balm_forge_version}")
 	// modImplementation("curse.maven:waystones-245755:${waystones_forge_version}")
 
