feat: collection of improvements to visibility of claims etc.
- Claim visibility boolean is a now privacy tri-state (public/private/allies)
  Default is public
- Added Location Mode tri-state to control player head visibility on map
  Default is public
- Claim & head visibility is now better sync'd to clients - when players join or leave a party
  or when they ally or un-ally with a party (needs new FTB Teams event)
- A fair bit of internal code cleanup around this functionality

https://github.com/FTBTeam/FTB-Mods-Issues/issues/218
https://github.com/FTBTeam/FTB-Mods-Issues/issues/64

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -45,7 +45,7 @@ side = "BOTH"
 [[dependencies.ftbchunks]]
 modId = "ftbteams"
 mandatory = true
-versionRange = "[1.0.0,)"
+versionRange = "[1802.2.7-build.73,)"
 ordering = "AFTER"
 side = "BOTH"
 
