feat: significant rework of team claim limits
Added "party_limit_mode" configurable to server config: can choose how
team member's personal claim limits contribute to overall team limit
Default is owner's limits only, which was previous behaviour

Also added "hard_team_claim_limit" and "hard_team_force_limit" as hard
maxima for a team's claim & forceload limits. Default is 0, meaning unlimited

Added supported for new events from FTB Teams (dev build required for now) -
changes in ranks now immediately get used to recalculate team limits and
player offline forceloading ability

Code cleanup in FTBChunksTeamData - moved individual member data into
new TeamMemberData object (original claims, claim limits, offline loading)

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -50,8 +50,16 @@ ordering = "AFTER"
 side = "BOTH"
 
 [[dependencies.ftbchunks]]
+modId = "ftbranks"
+mandatory = false
+versionRange = "[1802.1.9-build.47,)"
+ordering = "AFTER"
+side = "BOTH"
+
+[[dependencies.ftbchunks]]
 modId = "kubejs"
 mandatory = false
 versionRange = "[1801.4.2-,)"
 ordering = "BEFORE"
 side = "BOTH"
+
