chore: changelog update

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,25 +1,29 @@
 org.gradle.jvmargs=-Xmx2G
 org.gradle.daemon=false
+# Mod
 mod_id=ftbchunks
 archives_base_name=ftb-chunks
-maven_group=dev.ftb.mods
-mod_version=1802.3.7
-mod_author=FTB Team
 minecraft_version=1.18.2
-forge_version=40.1.84
+# Build time
+mod_version=1802.3.7
+maven_group=dev.ftb.mods
+mod_author=FTB Team
+# Curseforge publishing
 curseforge_id_forge=314906
 curseforge_id_fabric=472657
 curseforge_type=release
+# Cross-platform
 architectury_version=4.1.34
+forge_version=40.1.84
 fabric_loader_version=0.13.3
 fabric_api_version=0.47.9+1.18.2
-ftb_library_version=1802.3.8-build.157
+# Deps
 ftb_teams_version=1802.2.7-build.73
+ftb_library_version=1802.3.8-build.157
+# Optional deps
+ftb_ranks_version=1802.1.9-build.49
 kubejs_version=1802.5.0-build.322
 rhino_version=1801.1.9-build.131
-ftb_ranks_version=1802.1.9-build.49
-
-# Compat
 waystones_forge_version=3830849
 waystones_fabric_version=3830820
 balm_forge_version=3914491
