--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -59,6 +59,6 @@ side = "BOTH"
 [[dependencies.ftbchunks]]
 modId = "kubejs"
 mandatory = false
-versionRange = "[${kubejs_version},)"
+versionRange = "[${kubejsversion},)"
 ordering = "AFTER"
 side = "BOTH"
