--- a/gradle.properties
+++ b/gradle.properties
@@ -13,10 +13,10 @@ fabric_loader_version=0.14.9
 fabric_api_version=0.60.0+1.19.2
 
 ftb_library_version=1902.3.10-build.155
-ftb_teams_version=1902.2.10-build.72
-ftb_ranks_version=1902.1.11-build.46
-kubejs_version=1900.5.5-build.28
-rhino_version=1802.1.14-build.190
+ftb_teams_version=1902.2.10-build.75
+ftb_ranks_version=1902.1.12-build.50
+kubejs_version=1902.6.0-build.119
+#rhino_version=1802.1.14-build.190
 
 curseforge_id_forge=314906
 curseforge_id_fabric=472657
@@ -24,6 +24,6 @@ curseforge_type=release
 
 # Compat
 waystones_forge_version=3901921
-waystones_fabric_version=3830820
+waystones_fabric_version=3901920
 balm_forge_version=3914527
-balm_fabric_version=3914493
+balm_fabric_version=3913965
