--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -59,7 +59,7 @@ side = "BOTH"
 [[dependencies.ftbchunks]]
 modId = "kubejs"
 mandatory = false
-versionRange = "[1801.4.2-,)"
+versionRange = "[1802.5.5-build.550,)"
 ordering = "BEFORE"
 side = "BOTH"
 
