feat: added optional gamestage requirement
"require_game_stage" server config setting, defaults to false
If true, players need the "ftbchunks_mapping" game stage to be able
to open the map or see the minimap

KubeJS and/or Gamestages are required to support this

https://github.com/FTBTeam/FTB-Mods-Issues/issues/580

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -46,8 +46,8 @@ dependencies {
 	modImplementation("dev.ftb.mods:ftb-library-fabric:${rootProject.ftb_library_version}") { transitive = false }
 	modImplementation("dev.ftb.mods:ftb-teams-fabric:${rootProject.ftb_teams_version}") { transitive = false }
 	modImplementation("dev.ftb.mods:ftb-ranks-fabric:${rootProject.ftb_ranks_version}") { transitive = false }
-//	modImplementation("dev.latvian.mods:rhino-fabric:${rootProject.rhino_version}") { transitive = false }
-//	modImplementation("dev.latvian.mods:kubejs-fabric:${rootProject.kubejs_version}") { transitive = false }
+	modImplementation("dev.latvian.mods:rhino-fabric:${rootProject.rhino_version}")
+	modImplementation("dev.latvian.mods:kubejs-fabric:${rootProject.kubejs_version}")
 
 //	modImplementation("curse.maven:auth-me-356643:3725468")
 	modImplementation("curse.maven:cloth-config-348521:3972420")
