--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -58,8 +58,8 @@ dependencies {
 	modImplementation("dev.ftb.mods:ftb-library-forge:${rootProject.ftb_library_version}") { transitive = false }
 	modImplementation("dev.ftb.mods:ftb-teams-forge:${rootProject.ftb_teams_version}") { transitive = false }
 	modImplementation("dev.ftb.mods:ftb-ranks-forge:${rootProject.ftb_ranks_version}") { transitive = false }
-	modImplementation("dev.latvian.mods:rhino-forge:${rootProject.rhino_version}") { transitive = false }
-	modImplementation("dev.latvian.mods:kubejs-forge:${rootProject.kubejs_version}") { transitive = false }
+	modImplementation("dev.latvian.mods:rhino-forge:${rootProject.rhino_version}")
+	modImplementation("dev.latvian.mods:kubejs-forge:${rootProject.kubejs_version}")
 
 	modLocalRuntime("me.shedaniel:RoughlyEnoughItems-forge:8.3.563")
 	modImplementation("curse.maven:balm-531761:${balm_forge_version}")
