build: some build system cleanups, mainly around kubejs

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,8 @@ ftb_library_version=1902.3.10-build.160
 ftb_teams_version=1902.2.10-build.75
 ftb_ranks_version=1902.1.12-build.50
 kubejs_version=1902.6.0-build.119
-#rhino_version=1802.1.14-build.190
+rhino_version=1902.2.2-build.264
+ingredient_extension_api_version=2.0.9
 
 curseforge_id_forge=314906
 curseforge_id_fabric=472657
@@ -27,4 +28,5 @@ waystones_forge_version=3901921
 waystones_fabric_version=3901920
 balm_forge_version=3914527
 balm_fabric_version=3913965
+gamestages_version=11.0.2
 
