build: use extra-local-mods from mods-meta
Adding mods to local workspace now easy

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -71,6 +71,8 @@ dependencies {
 	shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive false }
 }
 
+apply from: "https://raw.githubusercontent.com/FTBTeam/mods-meta/main/gradle/extra-local-mods.gradle"
+
 processResources {
 	def file = new File("./build/resources/main/META-INF/mods.toml")
 	if (file.exists()) {
