--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -69,6 +69,8 @@ dependencies {
 	shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
 }
 
+apply from: "https://raw.githubusercontent.com/FTBTeam/mods-meta/main/gradle/extra-local-mods.gradle"
+
 // The AW file is needed in :fabric project resources when the game is run.
 task copyAccessWidener(type: Copy) {
 	from accessWidenerFile
