--- a/gradle.properties
+++ b/gradle.properties
@@ -29,4 +29,4 @@ waystones_fabric_version=3901920
 balm_forge_version=3914527
 balm_fabric_version=3913965
 gamestages_version=11.0.2
-
+common_prot_api_version=1.0.0
