feat: add luckperms support, clean up how permission integration works
Adapted from https://github.com/FTBTeam/FTB-Chunks/pull/214

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -69,6 +69,8 @@ dependencies {
 
 	common(project(path: ":common", configuration: "dev")) { transitive false }
 	shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive false }
+
+	compileOnly "net.luckperms:api:5.4"
 }
 
 apply from: "https://raw.githubusercontent.com/FTBTeam/mods-meta/main/gradle/extra-local-mods.gradle"
