--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -62,3 +62,10 @@ mandatory = false
 versionRange = "[${kubejsversion},)"
 ordering = "AFTER"
 side = "BOTH"
+
+[[dependencies.ftbchunks]]
+modId = "luckperms"
+mandatory = false
+versionRange = "[5.4.46,)"
+ordering = "AFTER"
+side = "SERVER"
